--- a/index.html
+++ b/index.html
@@ -6,5 +6,34 @@
   </head>
   <body>
 
+    <div class="heading">
+      <h1>Homework 6.2: Census Data Ratios and Catagories</h1>
+      <h2>Lillian Hawkins</h2>
+    </div>
+
+<div class="intro">
+  <h2>Ratio Used</h2>
+  <h3>(number of women, ages 15 to 50, who gave birth in county x) / (total population of women, ages 15 to 50, in county x)</h3>
+</div>
+
+    <div class="eqint">
+      <h3>Equal Interval Choropleth</h3>
+      <img src="equal_interval.png" alt="Equal Interval Choropleth">
+    </div>
+
+<div class="natbrk">
+  <h3>Natural Breaks Choropleth</h3>
+  <img src="natural_breaks.png" alt="Natural Breaks Choropleth">
+
+</div>
+
+<div class="qtl">
+  <h3>Quantiles Choropleth</h3>
+  <img src="Quantiles.png" alt="Quantile Choropleth">
+
+  <p></p>
+</div>
+
+<img src="" alt="">
   </body>
 </html>
