--- a/index.html
+++ b/index.html
@@ -18,18 +18,18 @@
 
     <div class="eqint">
       <h3>Equal Interval Choropleth</h3>
-      <img src="equal_interval.png" alt="Equal Interval Choropleth">
+      <img src="./maps_png/equal_interval.png" alt="Equal Interval Choropleth">
     </div>
 
 <div class="natbrk">
   <h3>Natural Breaks Choropleth</h3>
-  <img src="natural_breaks.png" alt="Natural Breaks Choropleth">
+  <img src="./maps_png/natural_breaks.png" alt="Natural Breaks Choropleth">
 
 </div>
 
 <div class="qtl">
   <h3>Quantiles Choropleth</h3>
-  <img src="Quantiles.png" alt="Quantile Choropleth">
+  <img src="./maps_png/Quantiles.png" alt="Quantile Choropleth">
 
   <p></p>
 </div>
