--- a/index.html
+++ b/index.html
@@ -14,22 +14,24 @@
 <div class="intro">
   <h2>Ratio Used</h2>
   <h3>(number of women, ages 15 to 50, who gave birth in county x) / (total population of women, ages 15 to 50, in county x)</h3>
+  <h2>Reasoning</h2>
+  <p></p>
 </div>
 
     <div class="eqint">
       <h3>Equal Interval Choropleth</h3>
-      <img src=".maps_png/equal_interval.png" alt="Equal Interval Choropleth">
+      <img src="equal_interval.png" alt="Equal Interval Choropleth">
     </div>
 
 <div class="natbrk">
   <h3>Natural Breaks Choropleth</h3>
-  <img src="/maps_png/natural_breaks.png" alt="Natural Breaks Choropleth">
+  <img src="natural_breaks.png" alt="Natural Breaks Choropleth">
 
 </div>
 
 <div class="qtl">
   <h3>Quantiles Choropleth</h3>
-  <img src="maps_png/Quantiles.png" alt="Quantile Choropleth">
+  <img src="Quantiles.png" alt="Quantile Choropleth">
 
   <p></p>
 </div>
