--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 
       <link rel="stylesheet" href="style.css">
 
-    <title></title>
+    <title>GEO370HW6.2</title>
   </head>
   <body>
 
@@ -18,27 +18,31 @@
   <h2>Ratio Used</h2>
   <h3>(number of women, ages 15 to 50, who gave birth in county x) / (total population of women, ages 15 to 50, in county x)</h3>
   <h2>Reasoning</h2>
-  <p></p>
+  <p>I chose to divide the count used in my previous map by the total number of women in each county because I wanted to see how women giving birth is distributed regardless of county population size.  </p>
 </div>
 
     <div class="eqint">
       <h3>Equal Interval Choropleth</h3>
       <img src="equal_interval.png" alt="Equal Interval Choropleth">
+      <h4>reflection</h4>
+      <p></p>
     </div>
 
 <div class="natbrk">
   <h3>Natural Breaks Choropleth</h3>
   <img src="natural_breaks.png" alt="Natural Breaks Choropleth">
+  <h4>reflection</h4>
 
 </div>
 
 <div class="qtl">
   <h3>Quantiles Choropleth</h3>
   <img src="Quantiles.png" alt="Quantile Choropleth">
+  <h4>reflection</h4>
 
   <p></p>
 </div>
 
-<img src="" alt="">
+
   </body>
 </html>
