--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
 
       <link rel="stylesheet" href="style.css">
 
+      <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,400;0,500;0,600;0,700;1,300&family=Lobster&family=Lobster+Two:ital,wght@0,400;0,700;1,400;1,700&family=Noto+Serif+Display:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Raleway+Dots&family=Raleway:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+
     <title>GEO370HW6.2</title>
   </head>
   <body>
@@ -25,14 +29,16 @@
       <h3>Equal Interval Choropleth</h3>
       <img src="equal_interval.png" alt="Equal Interval Choropleth">
       <h4>reflection</h4>
-      <p></p>
+      <p> The legend of the equal interval choropleth is easiest to read. This one makes the most sense to me but the choropleth itself doesn't reflect the data very well because it appears a little homogenized. </p>
     </div>
 
 <div class="natbrk">
   <h3>Natural Breaks Choropleth</h3>
   <img src="natural_breaks.png" alt="Natural Breaks Choropleth">
   <h4>reflection</h4>
+<p>The classes in the legend don't look very clean, if that makes sense, with the odd intervals. While I am not a fan of the legend readability, the actual choropleth gives the best representation of the data out of all three.
 
+ </p>
 </div>
 
 <div class="qtl">
@@ -40,7 +46,7 @@
   <img src="Quantiles.png" alt="Quantile Choropleth">
   <h4>reflection</h4>
 
-  <p></p>
+  <p> The map overall looks darker and is a little misleading. The interval for the last class is rather large, making more counties appear to have higher birth rates by comparison.  </p>
 </div>
 
 
