--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
   <p> The map overall looks darker and is a little misleading. The interval for the last class is rather large, making more counties appear to have higher birth rates by comparison.  </p>
 </div>
 <h3>data</h3>
-<a href="cleandata_final copy.csv"> Data used for maps</a>
+<a href="./cleandata_final copy.csv"> Data used for maps</a>
   </body>
 </html>
